feat: add estructure

--- a/package.json
+++ b/package.json
@@ -1,25 +1,86 @@
 {
-  "name": "recrutamento-back-end",
-  "version": "1.0.0",
-  "main": "server.js",
-  "repository": "https://github.com/marcusviini/recrutamento-back-end.git",
-  "author": "marcusviini <marcustere28@gmail.com>",
-  "license": "MIT",
+  "name": "companyhub",
+  "version": "2.9.0",
+  "description": "",
+  "main": "index.js",
+  "author": "Igor Cruz",
+  "license": "ISC",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "debug": "nodemon --inspect src/server.js"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "sequelize": "^5.21.5"
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.build.json",
+    "prestart": "rimraf dist && tsc -p tsconfig.build.json",
+    "start": "node dist/main/server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/main/server.ts",
+    "start:debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "lint": "eslint 'src/**' --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "jest --passWithNoTests --silent --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "NODE_ENV=test npm test -- --watch -c jest-integration-config.js",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:cov": "npm test -- --coverage",
+    "test:coveralls": "yarn test:cov && coveralls < coverage/lcov.info"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.12.1"
+    "@types/jest": "^26.0.14",
+    "@types/module-alias": "^2.0.0",
+    "@types/node": "^14.11.10",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.0",
+    "jest": "^26.5.3",
+    "lint-staged": "^10.4.2",
+    "mockdate": "^3.0.2",
+    "prettier": "^2.1.2",
+    "sucrase": "^3.16.0",
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm-test-transactions": "^1.11.1",
+    "typescript": "^4.0.3",
+    "@sendgrid/mail": "^7.4.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jest-mock-extended": "^1.0.10",
+    "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.5.4"
+  },
+  "dependencies": {
+    "@types/yup": "^0.29.4",
+    "reflect-metadata": "^0.1.13",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/swagger-ui-express": "^4.1.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.25",
+    "swagger-ui-express": "^4.1.5",
+    "sqlite3": "^5.0.0",
+    "yup": "^0.29.3",
+    "cors": "^2.8.5"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
