refactor: change circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,62 @@
 version: 2.1 //VERSÃO DO CIRCLECI
 jobs:
-  build:
+  First-Job:
+    docker:
+      - image: alpine:3.7
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD
+    steps:
+      - run:
+          name: Primeira Etapa
+          command: |
+            echo 'Primeira Etapa'
+  Second-Job:
+    docker:
+      - image: alpine:3.7
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD
+    steps:
+      - checkout
+      - run:
+          name: Segunda Etapa
+          command: |
+            ls -al
+            echo 'Segunda Etapa'
+  Terceira-Etapa:
     docker:
       - image: circleci/node:10-browsers
         auth:
           username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
+          password: $DOCKERHUB_PASSWORD
     steps:
-      - checkout
       - run:
-          name: The First Step
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
-      - run:
-          name: Code Has Arrived
-          command: |
-            ls -al
-            echo '^^Thats looks familiar^^'
-      - run:
-          name: Running in a Unique Container
+          name: Terceira Etapa
           command: |
             node -v
+  Quarta-Etapa:
+    docker:
+      - image: alpine:3.7
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD
+workflows:
+  version: 2
+  Example_Workflow:
+    jobs:
+      - First-Job
+      - Second-Job:
+          requires:
+            - First-Job
+      - Terceira-Etapa:
+          requires:
+            - First-Job
+      - Hold-For-Approval:
+          type: Approval
+          requires:
+            - Second-Job
+            - Terceira-Etapa
+      - Quarta-Etapa:
+          requires:
+            - Hold-For-Approval
