--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,14 @@ version: 2.1
 jobs:
   app:
     docker:
-      - image: alpine:3.7
+      - image: circleci/node:10-browsers
         auth:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
       - run:
-          name: Segunda Etapa
+          name: Iniciar o aplicativo
           command: |
             yarn start:dev
 workflows:
