--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Iniciar o aplicativo
+          name: Iniciar o aplicativos
           command: |
             yarn
 
