--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,7 @@
         "allowJs": true,
         "sourceMap": true,
         "rootDir": "src",
-        "baseUrl": "src",
-        "paths": {
-          "@/*": ["*"]
-        }
-    },
+        "baseUrl": "src",    },
     "include": [
       "src"
     ],
