feat: ensure createUser returns a new user

--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "test": "jest --passWithNoTests --silent --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
-    "test:integration": "NODE_ENV=test npm test -- --watch -c jest-integration-config.js",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
     "test:staged": "npm test -- --findRelatedTests",
     "test:cov": "npm test -- --coverage",
-    "test:coveralls": "yarn test:cov && coveralls < coverage/lcov.info"
+    "test:coveralls": "yarn test:cov && coveralls < coverage/lcov.info",
+    "pretest:integration": "NODE_ENV=test yarn migration:run",
+    "test:integration": "NODE_ENV=test yarn test -- --watch -c jest-integration-config.js"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
@@ -79,5 +80,9 @@
     "sqlite3": "^5.0.0",
     "yup": "^0.29.3",
     "cors": "^2.8.5"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
+
 }
