--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
         "allowJs": true,
         "sourceMap": true,
         "rootDir": "src",
-        "baseUrl": "src",    },
+        "baseUrl": "src",
+        "paths": {
+          "@/*": ["*"]
+        }
+      },
     "include": [
       "src"
     ],
