feat: change test into circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           name: Test
           command: |
             yarn
-            yarn test:cov
+            yarn test:ci
 workflows:
   version: 2
   Example_Workflow:
