--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.4",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
