refactor: change files to initial with UpperCase

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "prestart": "rimraf dist && tsc -p tsconfig.build.json",
-    "start": "node dist/main/server.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/main/server.ts",
-    "start:debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "start": "node dist/main/Server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/main/Server.ts",
     "lint": "eslint 'src/**' --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest --passWithNoTests --silent --runInBand",
