--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
-    "prestart": "rimraf dist && tsc -p tsconfig.build.json",
-    "start": "NODE_ENV=production ts-node dist/main/Server.js",
+    "prestart": "rimraf dist && ts-node -p tsconfig.build.json",
+    "start": "ts-node dist/main/Server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main/Server.ts",
     "lint": "eslint 'src/**' --fix",
     "format": "prettier --write \"src/**/*.ts\"",
