--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Igor Cruz",
   "license": "ISC",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
     "start": "node dist/main/Server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main/Server.ts",
     "lint": "eslint 'src/**' --fix",
