--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
-    "prestart": "npm run typeorm migration:run",
+    "prestart": "yarn typeorm migration:run",
     "start": "node dist/main/Server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main/Server.ts",
     "lint": "eslint 'src/**' --fix",
